static/frontend: fix package version warning overflow
The overflow was hidden to prevent package headers with many
licenses from spilling out of the viewport. A better solution
is to maintain normal overflow and truncate the list of licenses.

Fixes golang/go#53775.

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/417641
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/static/frontend/unit/unit.css
+++ b/static/frontend/unit/unit.css
@@ -167,8 +167,6 @@
   font-size: 0.875rem;
   height: 1.75rem;
   line-height: 1.75rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 .go-Main-headerDetailItem:not(:last-of-type)::after {
   content: '|';
